objects/Aggro_Service__mdt.object
<CustomObject>
    <description>Holds the Connection Details for the Aggro Service</description>
    <fields>
        <fullName>Aggro_Access_Token__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Access Token For Aggro Service</description>
        <label>Aggro Access Token</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Aggro_Refresh_Token__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The refresh token for the aggro service</description>
        <label>Aggro Refresh Token</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Aggro_Service_URL__c</fullName>
        <label>Aggro Service URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Aggro Service Setting</label>
    <pluralLabel>Aggro Service Settings</pluralLabel>
</CustomObject>